examples/invalid/syntaxErr/basic/noBody.wacc
# program missing body
# Output:
# #syntax error#

#Program:#

begin end
	
